tests/expected_invalid_parse_missing_phase_position_comma.diag.out
<input>:8:9: error: expected ',' between phase positions
            Validated,
            ^^^^^^^^^
